<resources>
    <string name="app_name">instagram</string>
    <string name="tagpost">1</string>
    <string name="lblpost">Posts</string>
    <string name="lblfollowers">Followers</string>
    <string name="tagfollowers">612</string>
    <string name="tagnameuser">Fikri Zulfikar Brandan</string>
    <string name="tagfollowing">602</string>
    <string name="lblfollowing">Following</string>
    <string name="btnfollow">Follow</string>
    <string name="btnmessage">Message</string>
</resources>